Add TAB completion to /tp